test/shimCases/invalid-require/index.js
module.exports = require('non-cjs');
